<resources>
    <string name="app_name">Fake Store</string>
    <string name="products">Products</string>
    <string name="filter_products">Filter Products</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_text">Fashion Pria Dan Wanita</string>
    <string name="content_text">Kaos Jersey Lari Running Runner CustomGRATISSS:\n
        -pasang logo\n
        -pasang tulisan/nama\n
        -ganti warna\nSpesifikasi Kaos Jersey Lari Running Runner Custom:\n
        </string>
    <string name="product_description">Deskripsi Produku:</string>
    <string name="price">Harga</string>
    <string name="brand_name">Brand Name</string>
    <string name="product_name">Product Name</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="xxxxxx">xxxxxx</string>
    <string name="dummyrating">4.5</string>
    <string name="detile_product">Detile Product</string>
    <string name="terms_and_conditions">Syarat dan ketentuan</string>
    <string name="Profile">Profile</string>
    <string name="my_name">Imron Nanda Marpaung</string>
    <string name="my_email">imron.nanda@mhs.pelitabangsa.ac.id</string>
    <string name="size">Ukuran Yang Tersedia:</string>
    <string name="price_format">$%.2f</string>
    <string name="rating_format">%.1f</string>
    <string name="category">Kategori</string>
    <string name="remove">Remove</string>
    <string name="cart">Keranjang</string>
    <string name="checkout">Checkout</string>
    <string name="shipping_notes">Catatan pengiriman</string>
    <string name="jumlah_barang">Jumlah Barang:</string>
    <string name="total_price">Total Harga:</string>
    <string name="total_bill">Total Tagihan:</string>
    <string name="service_fee">Biaya Layanan:</string>
    <string name="delivery">Pengiriman:</string>
    <string name="pay_now">Bayar Sekarang</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="enter_notes">Masukkan catatan:</string>
    <string name="error_message">Error Message</string>
    <string name="close">Close</string>
    <string name="resend">Resend</string>
    <string name="your_cart_is_empty">Keranjang Anda kosong</string>
    <string name="logout">Logout</string>


</resources>