<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingTop="35dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/cart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_shop_bag"
            app:drawableTint="@color/teal_200" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tvEmptyCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/image_cart_is_empty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imageView3"
            android:gravity="center"
            android:text="@string/your_cart_is_empty"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:visibility="visible" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCartItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomLayout"
        android:layout_below="@+id/headerLayout"
        android:layoutAnimation="@anim/layout_animation_item_left_to_right"
        tools:listitem="@layout/item_cart" />


    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_0_00"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/backhround_radius_15dp_white"
            android:backgroundTint="@color/blue7985f2"
            android:text="@string/checkout"
            android:textColor="@color/white" />

    </LinearLayout>
</RelativeLayout>