<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/backButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/background_radius_white_360"
        android:elevation="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleX="1.2"
            android:scaleY="1.2"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="ContentDescription" />
    </RelativeLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageProduct"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/product_02_01"
                    app:shapeAppearance="@style/CornerCutBottom" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="15dp"
                    app:srcCompat="@drawable/ic_price_tag_price_svgrepo_com"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/backhround_radius_15dp_white"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:paddingStart="10dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="8dp"
                    android:textAppearance="@style/TextBlack.size16spBolt"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/ic_baseline_star_24"
                    tools:text="@string/dummyrating" />
            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:layout_toStartOf="@+id/layoutRigh"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/categroryTv"
                            style="@style/TextBlack.size16spBolt"
                            android:ellipsize="end"
                            android:text="@string/brand_name" />

                        <TextView
                            android:id="@+id/textTitle"
                            style="@style/TextBlack.size14spBolt"
                            android:layout_marginTop="5dp"
                            android:ellipsize="end"
                            android:text="@string/product_name"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutRigh"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextBlack.size16spBolt"
                            android:layout_width="match_parent"
                            android:ellipsize="end"
                            android:text="@string/price"
                            android:textAlignment="textEnd" />

                        <TextView
                            android:id="@+id/textPrice"
                            style="@style/PriceText"
                            android:layout_width="match_parent"
                            android:layout_marginTop="5dp"
                            android:ellipsize="end"
                            android:text="@string/xxxxxx"
                            android:textAlignment="textEnd"
                            android:textSize="20dp" />
                    </LinearLayout>

                </RelativeLayout>

                <TextView
                    style="@style/TextBlack.size14spBolt"
                    android:layout_marginTop="5dp"
                    android:text="@string/product_description" />

                <TextView
                    android:id="@+id/textDescription"
                    style="@style/TextBlack.size14spBolt"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:justificationMode="inter_word"
                    android:text="@string/content_text"
                    android:textStyle="normal"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    style="@style/TextBlack.size14spBolt"
                    android:layout_marginTop="15dp"
                    android:text="@string/category" />

                <TextView
                    android:id="@+id/textCategory"
                    style="@style/TextBlack.size14spBolt"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:justificationMode="inter_word"
                    android:text="@string/xxxxxx"
                    android:textStyle="normal"
                    tools:ignore="UnusedAttribute" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:elevation="50dp">

        <RelativeLayout
            android:id="@+id/btnAddToCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/backhround_radius_15dp_white"
            android:backgroundTint="@color/blue_03b3ff"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/textButton"
                style="@style/TextBlack.size20spWhiteBold"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:drawablePadding="15dp"
                android:text="@string/add_to_bag"
                app:drawableEndCompat="@drawable/ic_shop_bag" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/subtractBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/backhround_radius_15dp_white"
                android:backgroundTint="@color/blue_03b3ff"
                android:text="-"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cartQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="0"
                android:textSize="28sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addBtn"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@drawable/backhround_radius_15dp_white"
                android:backgroundTint="@color/blue_03b3ff"
                android:text="+"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>