<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_error" />

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="15dp"
        android:text="@string/error_message"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClose"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tvErrorMessage"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@+id/btnResend"
        android:background="@drawable/backhround_radius_15dp_white"
        android:backgroundTint="@color/redCF0000"
        android:text="@string/close"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnResend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorMessage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResend"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tvErrorMessage"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_toStartOf="@id/btnClose"
        android:background="@drawable/backhround_radius_15dp_white"
        android:backgroundTint="@color/orangeFF6F00"
        android:text="@string/resend"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnClose"
        app:layout_constraintTop_toTopOf="@+id/btnClose" />

</androidx.constraintlayout.widget.ConstraintLayout>
